<resources>
    <string name="app_name">Student Attendance Management</string>
    <string name="attendance_manager">Attendance Manager</string>
    <string name="add_new_class">Add Class</string>
    <string name="enter_class">Class</string>
    <string name="enter_subject">Subject</string>
    <string name="attendance_sheet">Attendance Sheet</string>
    <string name="change_date">Change Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="rollnumber">RollNumber:</string>
    <string name="name">Name:</string>
    <string name="present">Present</string>
    <string name="no_data">No data</string>
    <string name="p">P</string>
    <string name="total_attendance">Total Attendance:</string>
    <string name="section">Section:</string>
    <string name="class12">Class:</string>
    <string name="date">Date</string>
    <string name="edit_class">Edit Class</string>
    <string name="section1">Section</string>
    <string name="show_detail">Show Detail</string>
</resources>