<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/attendance_student_roll"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rollnumber"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/attendance_student_name"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/attendance_present"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#00FF0A"
        android:gravity="center"
        android:text="@string/p"
        android:textSize="20sp" />


</LinearLayout>